<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_margin="0dp"
    tools:context=".MainActivity">
    <!-- Views on the right side -->

    <TextView
        android:id="@+id/tvBaseLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/tv1"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.117"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Base" />

    <TextView
        android:id="@+id/tvTipPercent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginTop="35dp"
        android:text="@string/tv2"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/tvBaseLevel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBaseLevel"
        tools:text="15%" />

    <!-- Views on the left side -->

    <TextView
        android:id="@+id/tvTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="72dp"
        android:layout_marginBottom="21dp"
        android:text="@string/tv3"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tvTotal"
        app:layout_constraintEnd_toEndOf="@+id/tvBaseLevel"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTipPercent"
        app:layout_constraintVertical_bias="0.31" />

    <EditText
        android:id="@+id/etBaseAmount"
        android:layout_width="212dp"
        android:layout_height="54dp"
        android:layout_margin="0dp"
        android:autofillHints=""
        android:ems="8"
        android:hint="@string/ev1"
        android:imeOptions="actionDone"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:padding="10dp"
        android:selectAllOnFocus="false"
        android:textAlignment="viewStart"
        android:textColorHint="#78909C"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvBaseLevel"
        app:layout_constraintStart_toStartOf="@+id/seekBarTip"
        tools:ignore="DuplicateIds,SpeakableTextPresentCheck" />

    <SeekBar
        android:id="@+id/seekBarTip"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:layout_marginStart="32dp"
        android:max="30"
        app:layout_constraintBottom_toBottomOf="@+id/tvTipPercent"
        app:layout_constraintStart_toEndOf="@+id/tvTipPercent"
        app:layout_constraintTop_toTopOf="@+id/tvTipPercent" />

    <TextView
        android:id="@+id/tvTipAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:textColor="#009688"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tvTip"
        app:layout_constraintStart_toEndOf="@+id/tvTip"
        app:layout_constraintTop_toTopOf="@+id/tvTip" />

    <TextView
        android:id="@+id/tvTotalAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:textAlignment="textStart"
        android:textColor="#3F51B5"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tvTotal"
        app:layout_constraintStart_toEndOf="@+id/tvTotal"
        app:layout_constraintTop_toTopOf="@+id/tvTotal" />

    <TextView
        android:id="@+id/tvFooter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="480dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="33dp"
        android:text="@string/tvFooter"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.722"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBarTip"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/titleFooter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="442dp"
        android:layout_marginBottom="23dp"
        android:text="@string/tvFOOT"
        android:textColor="#1B9F93"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/tvFooter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.662"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBarTip"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tvTipDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="418dp"
        android:text="@string/tv5"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/titleFooter"
        app:layout_constraintEnd_toEndOf="@+id/seekBarTip"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/seekBarTip"
        app:layout_constraintTop_toBottomOf="@+id/seekBarTip"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="21dp"
        android:layout_marginBottom="430dp"
        android:text="@string/tv4"
        android:textAlignment="textStart"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tvBaseLevel"
        app:layout_constraintHorizontal_bias="0.809"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTip"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvSplit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="348dp"
        android:text="@string/tv6"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvTotalRoundedUp"
        app:layout_constraintTop_toBottomOf="@+id/tvTotal"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/etSplit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:ems="10"
        android:hint="@string/et2"
        android:inputType="number"
        android:imeOptions="actionDone"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="@+id/tvSplit"
        app:layout_constraintStart_toEndOf="@+id/tvSplit"
        app:layout_constraintTop_toTopOf="@+id/tvSplit"
        android:autofillHints="" />

    <TextView
        android:id="@+id/tvTotalSplit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="39dp"
        android:layout_marginBottom="290dp"
        android:text="@string/tv8"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tvBaseLevel"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvTotal"
        app:layout_constraintTop_toBottomOf="@+id/tvSplit"
        app:layout_constraintVertical_bias="0.454" />

    <TextView
        android:id="@+id/tvSplitBillAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#079E90"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tvTotalSplit"
        app:layout_constraintStart_toStartOf="@+id/tvBillAmountRounded"
        app:layout_constraintTop_toTopOf="@+id/tvTotalSplit"
        app:layout_constraintVertical_bias="1.0"
        tools:text="50" />

    <TextView
        android:id="@+id/tvTotalRoundedUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="21dp"
        android:text="@string/tv9"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/etSplit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.147"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTotal"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tvBillAmountRounded"
        android:layout_width="85dp"
        android:layout_height="40dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="145dp"
        android:textColor="#007BDD"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tvTotalRoundedUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toEndOf="@+id/tvTotalRoundedUp"
        app:layout_constraintTop_toTopOf="@+id/tvTotalRoundedUp"
        app:layout_constraintVertical_bias="0.0"
        tools:text="5000" />

    <TextView
        android:id="@+id/tvSplitRoundedUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="75dp"
        android:text="@string/tv10"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/titleFooter"
        app:layout_constraintEnd_toStartOf="@+id/SplitBillRoundedAmount"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvTotalRoundedUp"
        app:layout_constraintTop_toBottomOf="@+id/tvTotalSplit"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/SplitBillRoundedAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#007BDD"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tvSplitRoundedUp"
        app:layout_constraintStart_toStartOf="@+id/tvBillAmountRounded"
        app:layout_constraintTop_toTopOf="@+id/tvSplitRoundedUp"
        tools:text="500" />

    <TextView
        android:id="@+id/footer3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="49dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/tv11"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/titleFooter"
        app:layout_constraintEnd_toEndOf="@+id/SplitBillRoundedAmount"
        app:layout_constraintHorizontal_bias="0.337"
        app:layout_constraintStart_toStartOf="@+id/SplitBillRoundedAmount"
        app:layout_constraintTop_toBottomOf="@+id/tvSplitRoundedUp"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>